[package]
name = "ecdar_web"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"
default-run = "ecdar_web"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
axum = { version = "0.6.20", features = ["json", "macros"]}
#ecdar-protobuf = { git = "https://github.com/ECDAR-AAU-SW-P5/Ecdar-ProtoBuf-rs", version = "0.1.0", features = ["client", "serde"] }
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["fs"] }
convert_case = "0.6.0"
ecdar-protobuf-transpiler = { git = "https://github.com/Ecdar/Ecdar-ProtoBuf-Transpiler-rs", version = "0.1.0" }
proc-macro2 = "1.0.69"
quote = "1.0.33"
tonic = "0.11.0"
clap = { version = "4.2.1", features = [ "derive", "string" ] }


[build-dependencies]
tonic-build = "0.11.0"

