[package]
name = "ecdar-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
ecdar-web-macros = { path = "../ecdar-web-macros" }
tokio = { version = "1.33.0", features = ["rt", "macros", "rt-multi-thread"] }

